# python-logs

./: .dockerignore  .editorconfig  .sample.env  README.md  docker-compose.yaml  elasticsearch.yaml  pyproject.toml  requirements.txt
app/: constants.py  es.py  main.py  schema.py
commands/: clean.sh  entrypoint.sh  format.sh  post.sh
data/: dump_data.py
docker/: Dockerfile
